<resources>
    <!-- START VALIDATIONS FIELDS-->
    <string name="exception_field_name">Field name not informed.</string>
    <string name="exception_field_dt_start">Field start date not informed.</string>
    <string name="exception_field_dt_end">Field end date not informed.</string>
    <string name="exception_field_local_name">Field local name not informed.</string>
    <string name="exception_field_event">Field event not informed.</string>
    <string name="exception_field_evaluation">Field evaluation not informed.</string>
    <string name="exception_field_local">Field local not informed.</string>
    <string name="exception_field_activity">Field activity not informed.</string>
    <string name="exception_field_type_attachment">Field type attachment not informed.</string>
    <string name="exception_field_stars">Field stars not informed.</string>
    <string name="exception_field_dt_store">Field store date not informed.</string>
    <string name="exception_field_description">Field description not informed.</string>
    <string name="exception_field_contact_mail">Field contact mail not informed.</string>
    <string name="exception_field_contact_name">Field contact name not informed.</string>
    <string name="exception_field_contact_phone">Field contact phone not informed.</string>
    <string name="exception_field_content">Field content not informed.</string>
    <string name="exception_field_user">Field user not informed.</string>
    <string name="exception_field_mail">Field mail not informed.</string>
    <string name="exception_field_image">Field image not informed.</string>
    <string name="exception_field_method_autentication">Field method authentication not informed.</string>
    <!-- END VALIDATIONS FIELDS -->

    <!-- START SOCIALS -->
    <string name="facebook_app_id">1129202023857983</string>
    <string name="fb_login_protocol_scheme">fb133977643868681</string>
    <string name="site">https://github.com/GAJ2L</string>
    <string name="google_maps_key">AIzaSyDdgNJBepj0PlYgFmjOrbf7DZD1HQUJPwU</string>
    <!-- END SOCIALS -->

    <!-- START TITLES -->
    <string name="app_name">Eventtus</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activities">Activities</string>
    <string name="title_events">Events</string>
    <string name="title_contact">Contact us</string>
    <string name="title_questions">Send a Question</string>
    <string name="add_event">Add event</string>
    <string name="my_events">My events</string>
    <string name="system">System</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="details">Details</string>
    <string name="title_details_activity">Details of activity</string>
    <string name="title_details_event">Details of event</string>
    <string name="title_create_event">Add event</string>
    <string name="title_to_rate_activity">To Rate</string>
    <string name="title_attachments_activity">Attachments</string>
    <string name="title_send_a_question">Send a question</string>
    <!-- END TITLES-->

    <!-- START LABELS-->
    <string name="lbl_btn_facebook">Sign in with Facebook</string>
    <string name="lbl_btn_google">Sign in   with Google</string>
    <string name="lbl_subject">Subject</string>
    <string name="lbl_message">Message</string>
    <string name="lbl_btn_send">Send</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!-- END LABELS-->

    <!-- START MESSAGES -->
    <string name="send_message">Message sent successfully</string>
    <string name="error">An unexpected error occurred!</string>
    <string name="validate_fields_message">Fill in the form fields</string>
    <string name="add_event_success">Event added successfully</string>
    <string name="add_event_error">There was an error adding the event</string>
    <string name="downloading">Downloading</string>
    <string name="downloading_success">Downloaded successfully</string>
    <string name="downloading_error">Error downloading file</string>
    <string name="error_send_message">Error in send the question</string>
    <string name="error_delete_event">Error in delete event</string>
    <string name="success_delete_event">Success in delete event</string>
    <string name="question_delete_msg">Do you want to delete?</string>
    <string name="error_evaluate">Error in evaluate</string>
    <string name="success_evaluate">Evaluated!</string>
    <string name="find_routes">Find Routes</string>
    <string name="disable_button_evaluate">Have you ever evaluated or this activity has not yet</string>
    <string name="activities">Activities</string>
    <string name="in_progress">In progress</string>
    <string name="completed">Completed</string>
    <string name="idle">Idle</string>
    <string name="update_event_success">Event updated successfully</string>
    <string name="success">Saved successfully</string>
    <string name="no_evaluations">No evaluations</string>
    <string name="message_no_survey">There no survey to answer!</string>
    <string name="message_error_survey">Answer all questions!</string>
    <string name="no_survey">No Survey</string>
    <string name="no_survey_info">This activity has no survey to answer</string>
    <string name="message_origin">Please enter origin address!</string>
    <string name="message_destination">Please enter destination address!</string>
    <!-- END MESSAGES-->

    <!-- START ERRORS -->
    <string name="err_btn_facebook">There was an error logging in with Facebook</string>
    <string name="err_btn_google">There was an error logging in with Google</string>
    <string name="card_details_activity">Details</string>
    <string name="card_rate_activity">To rate</string>
    <string name="card_send_a_question">Send a question</string>
    <string name="card_attachment">Attachments</string>
    <string name="btn_location_activity">Location</string>
    <string name="btn_about_event">About</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_contact">Contact</string>
    <string name="btn_activities_event">Activities</string>
    <string name="btnSend">Send</string>
    <string name="btnBack">Back</string>
    <string name="title_activity_location">Location</string>
    <string name="err_send_question_btn">Is not possible to send a message</string>
    <string name="err_conection">Not connected to the internet</string>
    <string name="err_conection_maps">Could not mount route. Check your connection!</string>
    <!-- END ERRORS-->

    <string name="details_location">Location</string>
    <string name="details_name">Name</string>
    <string name="details_event">Event</string>
    <string name="details_info">Description</string>
    <string name="details_date">Date</string>
    <string name="details_contact">Contact</string>
    <string name="btn_refresh_event">Refresh</string>
    <string name="info_eventtus">Team:</string>
    <string name="info">Eventtus is an application that aims to make life easier for organizers and users of an event. With a simple and agile interface, we can visualize details of the events and activities in which we are registered, as well as their locations</string>
    <string name="action_about">About</string>
    <string name="title_about">About</string>
    <string name="evaluations">Evaluations</string>
    <string name="code">Code</string>
    <string name="message_code">Enter the event code</string>
    <string name="qrcode">QR Code</string>
    <string name="survey">Survey</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="finish">Save</string>
    <string name="developer_team">Developer team</string>

    <!-- START SLIDE-->
    <string name="slide_next">Next</string>
    <string name="slide_skip">Skip</string>
    <string name="slide_start">Come on</string>
    <string name="slide_1_title">Hello!</string>
    <string name="slide_1_desc">Thank you for your interest in using Eventtus!</string>
    <string name="slide_2_title">Events</string>
    <string name="slide_2_desc">Have all your event data in the palm of your hand!</string>
    <string name="slide_3_title">Activities</string>
    <string name="slide_3_desc">See and download all the material that the minister offers!</string>
    <string name="slide_4_title">Location</string>
    <string name="slide_4_desc">Find out where your activity will occur!</string>
    <string name="slide_5_title">Did you like the event?</string>
    <string name="slide_5_desc">So evaluate it and leave a message to the organizers!</string>
    <string name="slide_6_title">Interact</string>
    <string name="slide_6_desc">Interact with the speaker by submitting questions and answering surveys</string>
    <!-- END SLIDE-->
</resources>