<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.BaseActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/txtMessage"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/txtMessage"
            android:layout_marginBottom="35dp"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/send_white"
            android:paddingLeft="5dp"
            android:paddingRight="35dp"
            android:textColor="@android:color/white"
            android:text="@string/lbl_btn_send"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnSend"
            android:layout_gravity="top|left"
            android:gravity="top"
            android:layout_centerInParent="true"
            android:layout_alignEnd="@+id/txtSubject"
            android:layout_alignStart="@+id/txtSubject"
            android:layout_below="@+id/txtSubject"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/lbl_message"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/txtSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/lbl_subject"
            android:inputType="textPersonName" />

    </RelativeLayout>
</FrameLayout>
