<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/viewLogin"
    android:backgroundTint="@color/colorPrimary">

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="20pt" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="20pt"
        android:layout_below="@+id/sign_in_button"
        tools:text="Login with Facebook" />

    <Button
        android:id="@+id/btnGoogle"
        style="@style/com_facebook_button"
        android:layout_width="wrap_content"
        android:layout_height="20pt"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:background="@android:color/background_light"
        android:drawableLeft="@drawable/google"
        android:text="@string/lbl_btn_google"
        android:textColorHint="@color/colorAccent" />

    <Button
        android:id="@+id/btnFace"
        style="@style/com_facebook_button"
        android:layout_width="match_parent"
        android:layout_height="20pt"
        android:layout_above="@+id/btnGoogle"
        android:layout_marginBottom="17dp"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:background="@android:color/background_light"
        android:drawableLeft="@drawable/facebook"
        android:text="@string/lbl_btn_facebook"
        android:textColorHint="@color/colorAccent" />

    <TextView
        android:id="@+id/lblApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:layout_below="@+id/login_button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnFace"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:drawableLeft="@drawable/eventtus" />

</RelativeLayout>